Bug 523148.  Speed up AddImportantRules.  r=dbaron